{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 986,
  "lineage": "cfc4d50f-5e17-99ac-0d23-f6bd2be8040b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.111.138.21",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-05-29T22:44:19.700-07:00",
            "id": "projects/ferrous-terrain-422816-i0/global/addresses/globaladdress",
            "name": "globaladdress",
            "prefix_length": 0,
            "project": "ferrous-terrain-422816-i0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/addresses/globaladdress"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_alloc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ferrous-terrain-422816-i0/global/networks/my-network",
            "mtu": 0,
            "name": "my-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1869880389841752703",
            "project": "ferrous-terrain-422816-i0",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/networks/my-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "my_custom_subnet_for_grafane1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-29T22:44:18.704-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/ferrous-terrain-422816-i0/regions/europe-central2/subnetworks/my-custom-subnet-for-grafane1",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "my-custom-subnet-for-grafane1",
            "network": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/networks/my-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ferrous-terrain-422816-i0",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/regions/europe-central2/subnetworks/my-custom-subnet-for-grafane1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.static"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sub_for_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-29T22:44:18.567-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/ferrous-terrain-422816-i0/regions/europe-central2/subnetworks/my-custom-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "my-custom-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/networks/my-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ferrous-terrain-422816-i0",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/regions/europe-central2/subnetworks/my-custom-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.static"
          ]
        }
      ]
    },
    {
      "module": "module.Compute_instance",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "Instance_for_grafane",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20240519",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/zones/europe-central2-c/disks/instance-for-grafane"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ferrous-terrain-422816-i0/zones/europe-central2-c/instances/instance-for-grafane",
            "instance_id": "211578729283300519",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "gfhKfeujPzU=",
            "name": "instance-for-grafane",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.217.122",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/networks/my-network",
                "network_ip": "10.10.10.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/regions/europe-central2/subnetworks/my-custom-subnet-for-grafane1",
                "subnetwork_project": "ferrous-terrain-422816-i0"
              }
            ],
            "project": "ferrous-terrain-422816-i0",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/zones/europe-central2-c/instances/instance-for-grafane",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-all"
            ],
            "tags_fingerprint": "DYx7eH_2KNQ=",
            "zone": "europe-central2-c"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.static",
            "google_compute_subnetwork.my_custom_subnet_for_grafane1"
          ]
        }
      ]
    },
    {
      "module": "module.NAT",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-05-29T22:44:18.010-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/ferrous-terrain-422816-i0/regions/europe-central2/routers/nat-router",
            "name": "nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/networks/my-network",
            "project": "ferrous-terrain-422816-i0",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/regions/europe-central2/routers/nat-router"
          }
        }
      ]
    },
    {
      "module": "module.NAT",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "ferrous-terrain-422816-i0/europe-central2/nat-router/my-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "ferrous-terrain-422816-i0",
            "router": "nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.NAT.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_connect_to_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-29T22:44:17.806-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ferrous-terrain-422816-i0/global/firewalls/allow-connect-to-db",
            "log_config": [],
            "name": "allow-connect-to-db",
            "network": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/networks/my-network",
            "priority": 1000,
            "project": "ferrous-terrain-422816-i0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/firewalls/allow-connect-to-db",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-29T22:44:17.710-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ferrous-terrain-422816-i0/global/firewalls/db1",
            "log_config": [],
            "name": "db1",
            "network": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/networks/my-network",
            "priority": 1000,
            "project": "ferrous-terrain-422816-i0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/firewalls/db1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2024-05-29T22:44:17.987-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ferrous-terrain-422816-i0/global/firewalls/website-fw-1",
            "log_config": [],
            "name": "website-fw-1",
            "network": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/networks/my-network",
            "priority": 1000,
            "project": "ferrous-terrain-422816-i0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/firewalls/website-fw-1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.static"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-29T22:44:29.728-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ferrous-terrain-422816-i0/global/firewalls/website-fw-2",
            "log_config": [],
            "name": "website-fw-2",
            "network": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/networks/my-network",
            "priority": 1000,
            "project": "ferrous-terrain-422816-i0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/firewalls/website-fw-2",
            "source_ranges": [
              "10.10.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.static",
            "module.firewalls.google_compute_firewall.fw1"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-29T22:44:41.396-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ferrous-terrain-422816-i0/global/firewalls/website-fw-3",
            "log_config": [],
            "name": "website-fw-3",
            "network": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/networks/my-network",
            "priority": 1000,
            "project": "ferrous-terrain-422816-i0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/firewalls/website-fw-3",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "load-balanced-backend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.static",
            "module.firewalls.google_compute_firewall.fw1",
            "module.firewalls.google_compute_firewall.fw2"
          ]
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-05-29T22:44:17.925-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ferrous-terrain-422816-i0/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/networks/my-network",
            "priority": 1000,
            "project": "ferrous-terrain-422816-i0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/firewalls/allow-ssh",
            "source_ranges": [
              "35.235.240.0/20",
              "46.200.235.0/24",
              "91.224.69.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.firewalls",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "target_grafane",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2024-05-29T22:44:17.848-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ferrous-terrain-422816-i0/global/firewalls/website-grafane",
            "log_config": [],
            "name": "website-grafane",
            "network": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/networks/my-network",
            "priority": 1000,
            "project": "ferrous-terrain-422816-i0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ferrous-terrain-422816-i0/global/firewalls/website-grafane",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-all"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.static"
          ]
        }
      ]
    }
  ]
}